[gd_scene load_steps=6 format=3 uid="uid://gdtwseqi8dej"]

[ext_resource type="Texture2D" uid="uid://1d86c7ux1ygd" path="res://icon.svg" id="1_1f0kj"]
[ext_resource type="Script" uid="uid://qeu38evce2aw" path="res://Scripts/enemy.gd" id="1_afpow"]
[ext_resource type="PackedScene" uid="uid://dytwcxut67ivy" path="res://Scenes/kill_zone.tscn" id="2_afpow"]

[sub_resource type="SpriteFrames" id="SpriteFrames_287tu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_1f0kj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0830c"]
size = Vector2(16, 16)

[node name="Enemy" type="Node2D"]
script = ExtResource("1_afpow")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(8, -8)
scale = Vector2(0.125, 0.125)
sprite_frames = SubResource("SpriteFrames_287tu")
autoplay = "default"

[node name="Kill_zone" parent="." instance=ExtResource("2_afpow")]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Kill_zone"]
position = Vector2(8, -8)
shape = SubResource("RectangleShape2D_0830c")

[node name="RayCast_Right" type="RayCast2D" parent="."]
position = Vector2(8, -8)
target_position = Vector2(13, 11)
collision_mask = 3

[node name="RayCast_Left" type="RayCast2D" parent="."]
position = Vector2(8, -8)
target_position = Vector2(-11, 11)
collision_mask = 3

[node name="RayCast_Left_wall" type="RayCast2D" parent="."]
position = Vector2(8, -8)
target_position = Vector2(-11, 0)
collision_mask = 3

[node name="RayCast_Right_wall" type="RayCast2D" parent="."]
position = Vector2(8, -8)
target_position = Vector2(11, 0)
collision_mask = 3
